# sdi

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  evolucion_sistema.docx  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260504_0001_initial_inventory.py  20260608_0002_add_producto_impuesto.py  20260708_0003_documento_ref_y_comprobante.py
app/: CAMBIOS_IMPLEMENTADOS.md  Cambios_a_realizar.md  main.py
app/api/: compras.py  productos.py  responses.py  stock.py  ventas.py
app/consumers/: compras_consumer.py
app/core/: comprobante.py  config.py  errors.py  logging.py
app/db/: session.py
app/models/: inventory.py
app/schemas/: inventory.py
app/services/: inventory.py
docs/: Contrato_Modulo_Stock.yaml  SistemaDistribuidodeInventario_release_1.docx  SistemaDistribuidodeInventario_release_2.docx  flujo_compras_profesional.mmd  flujo_ventas_profesional.mmd  instalacion_produccion.md  sdi_contrato_servicios_version_2.yaml  sdi_documentacion_servicios.html  vista_previa_flujos_profesionales.html
scripts/: catalogo.py  generate_openapi_yaml.py  mantenimiento.py  mantenimiento.sh  publicar_compra.py  seed_catalogo.py  simulacion.py
tests/: test_contract_units.py  test_inventory_flow.py  test_simulacion.py
